	* Enabled startup of the ntpd service in
	'centos7/install_rivendell.sh'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/rivendell-install-rhel6.xml'.
	* Added 'docs/rivendell-install-rhel7.xml'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'INSTALL-RHEL6'.
	* Removed 'INSTALL-RHEL7'.
2016-07-09 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make web' target.
2016-07-10 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2016-07-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'kernel-devel' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'kernel-devel' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-14 Fred Gleason <fredg@paravelsystems.com>
	* Added 'rpm-sign' to the set of installed packages in
	'centos7/install_rivendell_devel.sh'.
	* Added 'rpm-sign' to the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'cifs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
	* Added 'nfs-utils' to the set of installed packages in
	'centos7/install_rivendell.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'rpm-sign' from the set of installed packages in
	'centos6/install_rivendell_devel.sh'.
2016-07-15 Fred Gleason <fredg@paravelsystems.com>
	* Added 'ssvnc' to the set of installed packages in
	'centos6/install_rivendell.sh'.
	* Added 'ssvnc' to the set of installed packages in
	'centos7/install_rivendell.sh'.
2016-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'Enabling Samba' section in
	'docs/rivendell-install-rhel6.xml'.
	* Added an 'Enabling Samba' section in
	'docs/rivendell-install-rhel7.xml'.
2016-07-18 Fred Gleason <fredg@paravelsystems.com>
	* Changed name of the 'FINISHING UP' section to 'FINAL DETAILS'
	in 'centos6/install_rivendel.sh' and 'centos7/install_rivendell.sh'.