@@ -1,0 +1,124 @@
+# This is the main Samba configuration file. You should read the
+# smb.conf(5) manual page in order to understand the options listed
+# here. Samba has a huge number of configurable options (perhaps too
+# many!) most of which are not shown in this example
+#
+# For a step to step guide on installing, configuring and using samba,
+# read the Samba-HOWTO-Collection. This may be obtained from:
+#  http://www.samba.org/samba/docs/Samba-HOWTO-Collection.pdf
+#
+# Many working examples of smb.conf files can be found in the
+# Samba-Guide which is generated daily and can be downloaded from:
+#  http://www.samba.org/samba/docs/Samba-Guide.pdf
+#
+# Any line which starts with a ; (semi-colon) or a # (hash)
+# is a comment and is ignored. In this example we will use a #
+# for commentry and a ; for parts of the config file that you
+# may wish to enable
+#
+# NOTE: Whenever you modify this file you should run the command "testparm"
+# to check that you have not made any basic syntactic errors.
+#
+
+[global]
+   workgroup = RIVENDELL
+   security = share
+   os level = 2
+   time server = No
+   unix extensions = Yes
+   encrypt passwords = yes
+   map to guest = Bad User
+   printing = CUPS
+   printcap name = CUPS
+   socket options = SO_KEEPALIVE IPTOS_LOWDELAY TCP_NODELAY
+   wins support = No
+   veto files = /*.eml/*.nws/riched20.dll/*.{*}/
+   server string = Rivendell Radio Automation
+   domain master = false
+   domain logons = no
+   local master = no
+   preferred master = auto
+
+[traffic_import]
+   comment = Rivendell Traffic Imports
+   path = /home/rd/traffic_import
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = no
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
+
+[traffic_export]
+   comment = Rivendell Traffic Exports
+   path = /home/rd/traffic_export
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = no
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
+
+[music_import]
+   comment = Rivendell Music Imports
+   path = /home/rd/music_import
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = no
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
+
+[music_export]
+   comment = Rivendell Music Exports
+   path = /home/rd/music_export
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = no
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
+
+[rd_xfer]
+   comment = Rivendell Audio Transfer
+   path = /home/rd/rd_xfer
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = no
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
+
+[win32_setups]
+   comment = Windows Installation Setups
+   path = /var/win32
+   guest account = rd
+   guest only = yes
+   browseable = yes
+   read only = yes
+   guest ok = yes
+   directory mask = 0775
+   create mask = 0664
+   hide dot files = yes
+   force user = rd
+   force group = users
