@@ -88,3 +88,8 @@
 2016-07-18 Fred Gleason <fredg@paravelsystems.com>
 	* Changed name of the 'FINISHING UP' section to 'FINAL DETAILS'
 	in 'centos6/install_rivendel.sh' and 'centos7/install_rivendell.sh'.
+2016-07-19 Fred Gleason <fredg@paravelsystems.com>
+	* Added '--server' and '--standalone' installation modes in
+	'centos6/install_rivendell.sh'.
+	* Split 'common/smb.conf' into separate 'centos6/smb.conf' and
+	'centos7/smb.conf' versions.
